Changed epsilon_H to varepsilon_H throughout.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.49 2009/10/06 10:57:56 ith Exp $
+% $Id: dbi.tex,v 1.50 2009/10/10 11:07:57 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.49 2009/10/06 10:57:56 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.50 2009/10/10 11:07:57 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -155,7 +155,7 @@ the throat region in terms of the D3 charge:
 Condition (\ref{eq:BMbound-dbi}) may be converted into a 
 corresponding limit on the tensor-scalar ratio by noting from 
 the definition (\ref{eq:epsdefn-dbiintro})
-that $\dot{\varphi}^2 /\Mpl^2 = 2\epsilon_H H^2/P_{,X}$.
+that $\dot{\varphi}^2 /\Mpl^2 = 2\varepsilon_H H^2/P_{,X}$.
 This implies that the variation of the inflaton field 
 is given by the Lyth bound \eq{eq:genlyth-dbiintro} 
 \cite{lyth,bmpaper}
@@ -396,7 +396,7 @@ and (\ref{indices}), we find that\footnotemark
 % 
 \begin{equation}
 \label{eq:nsconstraint}
-1-n_s = 4 \epsilon_H +\frac{2s}{1-\gamma^2} \mp 
+1-n_s = 4 \varepsilon_H +\frac{2s}{1-\gamma^2} \mp 
 \frac{2\Mpl^2}{\gamma} \frac{T_{,\vp}|H_{,\vp}|}{TH}  \,,
 \end{equation}
 % 
