--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.48 2009/10/06 10:57:55 ith Exp $
+% $Id: multibrane.tex,v 1.49 2009/10/10 11:07:57 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.48 2009/10/06 10:57:55 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.49 2009/10/10 11:07:57 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1225,7 +1225,7 @@ In general, it is difficult to quantify
 the magnitude of $\Neff$ without 
 imposing further restrictions on the parameters of the models 
 and, in particular, on the functional form of the inflaton potential. 
-However, if the ratio $\epsilon_H/P_{,X}$ remains approximately 
+However, if the ratio $\varepsilon_H/P_{,X}$ remains approximately 
 constant during the final stages of inflation, one would anticipate that 
 $\Neff \lsim 60$. Nevertheless, if $N \ll 75852$, the bound 
 \eqref{eq:LHstrongerads} will only be violated for $n \le 3$ if 
