--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.47 2009/10/05 15:52:09 ith Exp $
+% $Id: dbi-intro.tex,v 1.48 2009/10/10 11:07:57 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.47 2009/10/05 15:52:09 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.48 2009/10/10 11:07:57 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -624,7 +624,7 @@ be quantified in terms of these three parameters:
 % 
 \begin{eqnarray}
 \label{eq:epsdefn-dbiintro}
-\epsilon_H \equiv -\frac{\dot{H}}{H^2}
+\varepsilon_H \equiv -\frac{\dot{H}}{H^2}
 = \frac{XP_{,X}}{\Mpl^2H^2} 
 = \frac{2\Mpl^2}{\gamma} \left( \frac{H_{,\vp}}{H} \right)^2 \\
 \label{eq:defeta-dbiintro}
@@ -636,21 +636,21 @@ s \equiv \frac{\dot{c_s}}{c_sH}
 % 
 where $\gamma \equiv 1/c_s$. 
 We will assume that the `slow-roll' conditions 
-$\{ \epsilon_H, |\eta_H | , |s | \}  \ll 1$ apply during observable inflation. 
+$\{ \varepsilon_H, |\eta_H | , |s | \}  \ll 1$ apply during observable inflation. 
 In this regime, the amplitudes and spectral indices of the two-point functions 
 for the scalar and tensor perturbations are given by \cite{gm}
 % 
 \begin{eqnarray}
 \label{eq:spectra-dbiintro}
 \Pr= \frac{H^4}{4\pi^2\dot{\varphi}^2} =\frac{1}{8 \pi^2 \Mpl^2}
-\frac{H^2}{c_s \epsilon_H}\,,
+\frac{H^2}{c_s \varepsilon_H}\,,
 \\
 \Pt = \frac{2}{\pi^2} \frac{H^2}{\Mpl^2} \,,
 \\
 \label{indices}
-1-n_s = 4 \epsilon_H -2\eta_H  +2s \,,
+1-n_s = 4 \varepsilon_H -2\eta_H  +2s \,,
 \\
- n_t = -2\epsilon_H  \,,
+ n_t = -2\varepsilon_H  \,,
 \end{eqnarray}
 % 
 respectively, where the quantities on the right-hand sides are evaluated 
