--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical-intro.tex - Ian Huston
-% $Id: perts.tex,v 1.16 2009/10/10 11:07:57 ith Exp $
+% $Id: perts.tex,v 1.17 2009/10/10 14:18:12 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.16 2009/10/10 11:07:57 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.17 2009/10/10 14:18:12 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -500,16 +500,22 @@ This involves taking
 \frac{\left(\vp_{0}'\right)^2}{2a^2}\ll \U\,,
 \end{equation}
 %
-such that $Q=0$ and $\H^2 = (8\pi G/3) a^2 \U$. The slow roll parameter
-$\bar{\epsilon}_H$ as defined in Refs.~\cite{Malik:2006ir} and
-\cite{Seery:2005gb} 
-(which is the square-root of the usual $\epsilon_H$ used in
-Chapter~\ref{ch:introduction}) is given by
+such that $Q=0$ and $\H^2 = (8\pi G/3) a^2 \U$. 
+In Chapter~\ref{ch:introduction} the slow-roll parameter $\varepsilon_H$ was
+defined. In this chapter and the rest of Part~\ref{part:numerical} a different slow 
+roll parameter will be used, called
+$\bar{\varepsilon}_H$ and defined in Refs.~\cite{Malik:2006ir} and
+\cite{Seery:2005gb}. 
+This new parameter is the square-root of $\varepsilon_H$ and is given by
 %
 \begin{equation}
- \bar{\epsilon}_H = \sqrt{4\pi G} \frac{\vp_{0}'}{\H}\,.
+ \bar{\varepsilon}_H = \sqrt{4\pi G} \frac{\vp_{0}'}{\H} = \sqrt{\varepsilon_H}\,.
 \end{equation}
 %
+The second slow roll parameter is still $\eta_H$. Following \Rref{Malik:2006ir} we
+will implement the slow roll approximation by keeping terms up to and including
+$\mathcal{O}(\bar{\varepsilon}^2_H)$ and terms which are
+$\mathcal{O}(\bar{\varepsilon}_H \eta_H)$. 
 With this approximation the second order equation (\ref{eq:SOKG-real-num})
 simplifies dramatically, and with the $F$ term included is
 %
@@ -549,12 +555,11 @@ a^2\left(\Uppp
 &=0 \,.
 \end{align}
 %
-The numerical simulation in this paper will solve the slow roll
-version of the second order above, \eq{eq:KG2-fourier-sr-num}, the first
+The numerical simulation described in Chapter~\ref{ch:numericalsystem} will solve the
+slow roll version of the second order equation given above,
+\eq{eq:KG2-fourier-sr-num}, the first
 order equation (\ref{eq:fokg}) and the background equation
-(\ref{eq:KGback-num}). In the next section we set up the correct form of
-these equations for the numerical simulation and discuss the
-implementation and some tests of the accuracy of the method.
+(\ref{eq:KGback-num}). 
 % 
 % 
 % 
