--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical-intro.tex - Ian Huston
-% $Id: perts.tex,v 1.18 2009/10/10 16:14:27 ith Exp $
+% $Id: perts.tex,v 1.19 2009/10/11 11:19:48 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.18 2009/10/10 16:14:27 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.19 2009/10/11 11:19:48 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -635,3 +635,35 @@ In Fourier space this term becomes
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+
+In this chapter equations of motion have been introduced for a single scalar field
+up to second order in cosmological perturbations. The second order gauge
+transformation has been discussed and the transformation components determined for
+the uniform curvature gauge.
+
+In Chapter~\ref{ch:introduction} first order classical perturbations were quantised
+in the Minkowski space limit and normalised using the Wronskian condition in
+\eq{eq:quantcondition-intro}. This constraint also fixes the quantisation for all
+the other orders of perturbation including $\dvp2$ \cite{Seery:2008qj}. 
+
+The perturbation equations are better understood in Fourier space although the cost
+of this approach is the necessity of convolution integrals of first order
+perturbations. Written in Fourier space the second order Klein-Gordon equation can
+be described purely in terms of the field perturbations and background quantities. 
+
+\eq{eq:SOKG-real-num}, first derived in \Rref{Malik:2006ir}, is valid on all scales
+inside and outside the horizon. When a particular slow roll approximation is made
+this equation simplifies to that found in \eq{eq:KG2-fourier-sr-num}. This slow roll
+version of the equation will be the central governing equation of the numerical
+calculation described in the next chapter.
+
+Finding numerical solutions of \eq{eq:KG2-fourier-sr-num} is the first step towards
+solving the full equation \eqref{eq:SOKG-real-num} for a single field then
+ultimately in the multi-field case given in \Rref{Malik:2006ir}. Understanding
+cosmological perturbations beyond the linear first order is critical to accurately
+calculating higher order statisical effects. Section~\ref{sec:observable-perts}
+outlined the connection between $\dvp2$ and observable quantities such as the
+comoving curvature perturbation and the non-Gaussianity of the perturbations. Going
+beyond single field slow roll models, non-linear effects become more important In
+Chapters~\ref{ch:numericalsystem} and \ref{ch:results} the first step is taken
+towards calculating higher order perturbations for these models.
