Changed msq with V0 macro.

--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.19 2009/10/07 16:03:23 ith Exp $
+% $Id: ihmacros.sty,v 1.20 2009/10/11 19:46:42 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -76,6 +76,7 @@
 \newcommand{\hybridtwoandfour}{\ensuremath{\msqphisq + \lambdaphifour}}
 \newcommand{\linde}{\ensuremath{-\msqphisq + \lambdaphifour +\frac{m^4}{4\lambda}}}
 \newcommand{\phitwooverthree}{\ensuremath{\sigma\varphi^{\frac{2}{3}}}}
+\newcommand{\msqphisqwithV}{\ensuremath{V_0 + \frac{1}{2} m_0^2 \varphi^2}}
 % 
 % 
 \newcommand{\cn}{\mathrm{\mathsf{c}}}
